testsuite/gnatprove/tests/P511-007__nonexisting_ext_obj_dir/test.gpr
project Test is

  for Object_Dir use External("NONEXISTING_ENVIRONMENTAL_VARIABLE");

end Test;
